--- a/20220118.md
+++ b/20220118.md
@@ -1,1 +1,51 @@
-test
+// 날짜 (12월 ~ 1월 자동 선택)
+this.btnDay_onclick = function(obj:nexacro.Button,e:nexacro.ClickEventInfo)
+{
+  var date = new Date();
+  var year = date.getFullYear();
+  var toMonth = ("0" + (1 + date.getMonth())).slice(-2);
+  var day = ("0" + date.getDate()).slice(-2);
+
+	var date2 = new Date();
+	var oneMonthAgo = new Date(date2.setMonth(date2.getMonth() - 1));	// 한달 전
+
+	var fromMonth = ("0" + (1 + oneMonthAgo.getMonth())).slice(-2);
+	
+	if(toMonth == "01") {
+		var fromDay =  (year - 1) + fromMonth + day; 
+	} else {
+		var fromDay =  year + fromMonth + day; 
+	}
+	
+	var toDay =  year + toMonth + day;
+}
+
+// 버튼 클릭 시 그리드 입력값 null 체크
+// Confirm 버튼 클릭 시 Insert
+this.fnConfirm = function(obj:nexacro.Button,e:nexacro.ClickEventInfo)
+{	
+	// P_CODE, P_NAME, S_CODE 입력체크
+	var errcol = "";
+	var dataChk = true;
+	var dataSet = this.DS_MAIN;
+	var rowCount = dataSet.rowcount;
+	var gridArr = ["P_CODE","P_NAME","S_CODE"];
+
+	for(var i = 0; i < rowCount; i++) { // 조건은 그리드 행 개수
+		for(var j = 0; j < gridArr.length; j++) {
+			if(dataSet.getColumn(0+i, gridArr[j]) == null || dataSet.getColumn(0+i, gridArr[j]) == "") {
+				dataChk = false;
+				errcol = gridArr[j];
+				trace(errcol + " :: 데이터 없음!!!!");
+				break;
+			}
+		}
+	}
+	
+	if (dataChk == false || dataSet.getRowCount() == 0) {
+		alert("Error!!"); // 저장할 데이터가 없습니다.
+		return;
+	}
+	
+	this.fnInsert();
+};
